--- a/.env
+++ b/.env
@@ -1,1 +1,19 @@
 NAME=gitpm_example_repo
+
+# Eww Clock Widget Configuration
+# This file is read by yolk to configure the clock widget
+
+# Time format (date command format string)
+TIME_FORMAT=%H:%M:%S
+DATE_FORMAT=%A, %B %d, %Y
+
+# Window geometry
+GEOMETRY_WIDTH=300px
+GEOMETRY_HEIGHT=120px
+GEOMETRY_X=50%
+GEOMETRY_Y=10px
+GEOMETRY_ANCHOR=top center
+
+# Update intervals
+TIME_INTERVAL=1s
+DATE_INTERVAL=30s
